--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 *{margin: 10px;}
+
 header {color:blue}
 topnav a:hover {background-color: #6d1197;
         color: black;
@@ -10,21 +11,25 @@ h1{font-family: Georgia, 'Times New Roman', Times, serif;
 margin: 10px;
 padding: 2px;}
 
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
 
 h1{color: aqua;}
 h2{color: #6d1197;} 
 h3{color: #6d1197;}
 
-section { 
-  border-width: 2px;
-  border-style: dotted;
-  border-color: blueviolet;
-  border: 5px solid blue;}
-
-Section {
-  margin: 10px 50px
+.star {
+  float:left;
+  width: 320px;
+  padding: 10px;
+  border: 5px solid gray;
+  margin: 0;
+  
 }
-
 aside {
   width: 20%;
   padding-left: 15px;
@@ -33,5 +38,6 @@ aside {
   font-style: italic;
   
 }
+
 
 
